Add tweets.css & add skeleton for tweets

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
     <!-- New Tweet CSS -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
+    <!-- Tweets CSS -->
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
+
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -70,6 +73,17 @@
               <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+      <section class="tweets">
+        <article class="tweet">
+        <header>
+          <h2>Tweet Header 1</h2>
+        </header>
+          <p>Tweet content goes here.</p>
+        <footer> 
+          <p>Tweet footer information.</p>
+        </footer>
+      </article>
       </section>
     </main>
   </body>
