Implement desktop-version & add screenshots

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       </div>
       <br>
       <div id="header-name">
-        <h2>Your Name</h2>
+        <h2>Terrence L</h2>
       </div>
     </header>
 
